[gd_scene load_steps=16 format=2]

[ext_resource path="res://Themes/MainMenu_Overlay.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/UI/Components/AuxiliaryBottomButtonMargin.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/Map/Map.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/Map/MapNode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Maps/MapBacking2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Maps/MapBacking4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Maps/MapBorder5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Maps/MapBorder6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Maps/MapBacking5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Maps/MapBorder2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Maps/MapBorder4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Maps/MapBorder3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Maps/MapBacking6.png" type="Texture" id=14]
[ext_resource path="res://Assets/Maps/MapBacking3.png" type="Texture" id=15]
[ext_resource path="res://Scripts/UI/Map/MapManger.gd" type="Script" id=16]

[node name="Map" type="CanvasLayer"]
unique_name_in_owner = true
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_right = -35.0
margin_bottom = -10.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 954.0
margin_bottom = 590.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 954.0
margin_bottom = 65.0
bbcode_enabled = true
bbcode_text = "[center][b]M[/b]ap[/center]"
text = "Map"
fit_content_height = true

[node name="ViewportContainer" type="ViewportContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 954.0
margin_bottom = 490.0

[node name="Viewport" type="Viewport" parent="MarginContainer/VBoxContainer/ViewportContainer"]
size = Vector2( 954, 421 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3
gui_disable_input = true

[node name="Camera2D" type="Camera2D" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport"]
position = Vector2( 500, 250 )
current = true

[node name="MapManager" type="Control" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport"]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 1
script = ExtResource( 16 )

[node name="Map1" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
map_name = "Outside Gas Station"

[node name="Map2" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
map_name = "Inside Gas Station"
border_image = ExtResource( 10 )
backing_image = ExtResource( 5 )

[node name="Map3" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
map_name = "City Street"
border_image = ExtResource( 13 )
backing_image = ExtResource( 15 )

[node name="Map4" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
border_image = ExtResource( 12 )
backing_image = ExtResource( 6 )

[node name="Map5" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
border_image = ExtResource( 7 )
backing_image = ExtResource( 9 )

[node name="Map6" parent="MarginContainer/VBoxContainer/ViewportContainer/Viewport/MapManager" instance=ExtResource( 4 )]
border_image = ExtResource( 8 )
backing_image = ExtResource( 14 )

[node name="ButtonCanvas" type="CanvasLayer" parent="."]
layer = 20

[node name="BottomButtonMargin" parent="ButtonCanvas" instance=ExtResource( 2 )]
Continue = false

[connection signal="Back" from="ButtonCanvas/BottomButtonMargin" to="." method="_on_BottomButtonMargin_Back"]
